--- a/2020-04-29_port_10/Portfolio_10.Rmd
+++ b/2020-04-29_port_10/Portfolio_10.Rmd
@@ -6,7 +6,10 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+pacman::p_load(tidyverse)
+
+df <- read_csv("emp_all_all.csv")
+?read_csv()
 ```
 
 ## R Markdown
